--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -785,7 +785,7 @@
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>0</y>
+          <y>-129</y>
           <width>331</width>
           <height>509</height>
          </rect>
@@ -993,6 +993,9 @@
            </item>
            <item>
             <widget class="QCheckBox" name="cb_showDSS_FN">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Show Frame &amp;&amp; Name</string>
              </property>
